--- a/one-click.yaml
+++ b/one-click.yaml
@@ -1,12 +1,4 @@
-version: '3.8'
-
-#
-# ------------------------------------------------------------------------------------------
-# DANGER ZONE BELOW
-#
-# The remainder of this file likely does not need to be changed. Please only make modifications
-# below if you understand what you are doing.
-#
+# Coolify One-Click Install for Pelican Game Panel and Wings
 services:
   database:
     image: mariadb:10.5
