Add DB_DATABASE environment variable to production config

--- a/production.yaml
+++ b/production.yaml
@@ -22,6 +22,7 @@ services:
       DB_PORT: ${DB_PORT}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
       MAIL_FROM: ${MAIL_FROM}
       MAIL_DRIVER: ${MAIL_DRIVER}
       MAIL_HOST: ${MAIL_HOST}
